--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,20 @@
 </head>
 
 <body>
+    <div>
+        <header>
 
+        </header>
+        <section1>
+
+        </section1>
+        <section2>
+
+        </section2>
+        <footer>
+
+        </footer>
+    </div>
 </body>
 
 </html>
