suppression de l'image bridge et remplacer par logo2

--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <header>
-
+            <a href="#" class="logo"> <img src="/Images/Logo2.png" alt="logo"></a>
         </header>
         <section1>
 
