--- a/index1.html
+++ b/index1.html
@@ -11,6 +11,23 @@
     <div>
         <header>
             <a href="#" class="logo"> <img src="/Images/Logo2.png" alt="logo"></a>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">ACCUEIL</a>
+                    </li>
+                    <li>
+                        <a href="#">A PROPOS</a>
+                    </li>
+                    <li>
+                        <a href="#">NOS SERVICES</a>
+                    </li>
+                    <li><a href="#">BLOG</a></li>
+                    <li>
+                        <a href="#">CONTACTEZ NOUS</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
         <section1>
 
