--- a/index1.html
+++ b/index1.html
@@ -22,7 +22,9 @@
                     <li>
                         <a href="#">NOS SERVICES</a>
                     </li>
-                    <li><a href="#">BLOG</a></li>
+                    <li>
+                        <a href="#">PRICING</a>
+                    </li>
                     <li>
                         <a href="#">CONTACTEZ NOUS</a>
                     </li>
