--- a/index1.html
+++ b/index1.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="style1.css">
     <title>page home</title>
 </head>
 
 <body>
     <div>
         <header>
-            <a href="#" class="logo"> <img src="/Images/Logo2.png" alt="logo"></a>
+            <a href="#" class="hlogo"> <img src="/Images/Logo2.png" alt="logo"></a>
             <nav>
-                <ul>
+                <ul class="hmenu">
                     <li>
                         <a href="#">ACCUEIL</a>
                     </li>
@@ -30,6 +33,12 @@
                     </li>
                 </ul>
             </nav>
+            <div class="hsepar">
+                <h1></h1>
+                <h2></h2>
+                <button class="hbtn">
+                    </button>
+            </div>
         </header>
         <section1>
 
