--- a/service/index.html
+++ b/service/index.html
@@ -4,13 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>service</title>
 </head>
 <body>
     <div class="service">
         <h1 class="stitre">Nos service</h1>
         <hr>
-        <video src="srvice/media/vid-agence.mp4"></video>
+        <video class="svideo" controls>
+            <source src="media/vid-agence.mp4" type="video/mp4">
+            </video>
+                <p>Votre site Web est sans doute votre principal
+                 atoutmarketing, <span class="sp1"> s'il ne fait pas croître votre
+                 entreprise, il est temps d'en créer un nouveau</span></p>
+                 <hr>
+                 <div class="Ssection1">
+                     <h2 class="Spart1">développement web</h2>
+                     <i class="fas fa-desktop"></i>
+                     <p class="para1">Nous créons des sites web
+                        et des solutions innovantes, 
+                        responsives et sur mesure 
+                        qui fournissent<details> une première 
+                        impression puissanteet 
+                        qui fonctionnent parfaitement.
+                        <button>voir plus</button>
+                    </details>
+                     </p>
+                     <h2 class="Spart1">digital marketing</h2>
+                     <i class="fas fa-microphone"></i>
+                     <p class="para1">Nous livrons des stratégies marketing
+                        qui génèrent plus de prospects,<details>plus de ventes 
+                       et de profits pour vous et qui assuren un trafic
+                        durable vers votre site Web. 
+                        <button>voir plus</button>
+                    </details>
+                     </p>
+                     <h2 class="Spart1">branding & stratégie</h2>
+                     <i class="fas fa-fire"></i>
+                     <p class="para1">Le Branding est au cœur
+                        de tout ce que nous faisons.
+                        Nous utilisons <details>la stratégie et le design 
+                       pour relier les marques et les clients à travers 
+                       des choses qu’ils aimentt 
+                        <button>voir plus</button>
+                    </details>
+                     </p>
+                     <h2 class="Spart1">ux & web design</h2>
+                     <<i class="fas fa-drafting-compass"></i>
+                     <p class="para1">Nous savons bien que votre site Web 
+                        est le cœur de votre<details>présence. Nous créons des
+                         expériences-utilisateur uniques, spécifiquement
+                         pour votre entreprise. 
+                        <button>voir plus</button>
+                    </details>
+                     </p>
+                     <h2 class="Spart1">développement mobile</h2>
+                     <i class="fas fa-mobile-alt"></i>
+                     <p class="para1">Avec la bonne application vous pouvez
+                        surmonter la concurrence<details>et faire en sorte que votre
+                        entreprise se démarque sur un marché très concurrentiel.
+                        <button>voir plus</button>
+                    </details>
+                     </p>
+                     <h2 class="Spart1">conception graphique</h2>
+                     <i class="fas fa-desktop"></i>
+                     <p class="para1">Nous combinons l’art et la technologie
+                        pourcommuniquer des<details> idées à
+                        travers des images et attirer 
+                       l’attention des utilisateurs vers votre
+                        business.
+                        <button>voir plus</button>
+                    </details>
+                     </p>
+                 </div>
+                 <div class="ssection2">
+                     <img src="images/bridge-1660417_1920.jpg">
+                     <h3>Apprenez à nous connaitre sur notre page</h3>
+                     <<h3>"Qui sommes-<span>nous"</span></h3>
+                     <button>Bienvenu chez-nous</button>
+                     <button>Roteur</button>
+                     <h4>Trouvez -<span> Nous :</span></h4>
+                     <div>
+                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-linkedin-in"></i>
+                        <i class="fab fa-twitter"></i>
+                     </div>
+                 </div>
     </div>
 </body>
 </html>
