--- a/index1.html
+++ b/index1.html
@@ -34,10 +34,9 @@
                 </ul>
             </nav>
             <div class="hsepar">
-                <h1></h1>
-                <h2></h2>
-                <button class="hbtn">
-                    </button>
+                <h1>On vous rappelle sous 24h</h1>
+                <h2>Digitalisation en main</h2>
+                <button class="hbtn"> SUBSCRIBE</button>
             </div>
         </header>
         <section1>
