--- a/section-pricing/index.html
+++ b/section-pricing/index.html
@@ -6,55 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
     <div class="testimoniale">
-        <h1 class="test">TESTIMONIALE</h1>
 
-
-
-        <div class="commentaire">
-            <!-- rectengle -->
-            <div></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, voluptates enim nisi ab illum error omnis tenetur quidem distinctio vero dignissimos? Laboriosam, ipsum quaerat harum facilis magni aliquid molestias repudiandae.</p>
+        <h1 class="test">Testimonials</h1>
+        <div class="comment">
             <div>
+                <div>
+                    <div>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum adipisci sapiente aspernatur incidunt soluta ipsam possimus veniam dolorem nihil, delectus dignissimos, vero hic! Sapiente explicabo vitae natus adipisci doloribus enim. Et quidem officiis
+                        alias nam distinctio omnis odio dolorum ex architecto, repellat sit mollitia cum saepe reiciendis ipsa quisquam? Atque odio quo sunt accusantium iure laborum necessitatibus vero porro incidunt?
+                    </p>
+                </div>
+
+                <div>
+
+                </div>
                 <img src="" alt="">
-                <h3>SIMO</h3>
-                <h4></h4>
             </div>
         </div>
+    </div>
 
 
-        <!--  -->
+    <!--  -->
 
 
-        <div class="commentaire">
-            <!-- rectengle -->
-            <div></div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima inventore odit recusandae sequi ipsam! Aliquid quod, consequatur dolor ducimus eum atque! Voluptates commodi vero quas doloremque. Quaerat rem doloremque hic.</p>
-            <div>
-                <img src="" alt="">
-                <h3>hamide</h3>
-                <h4></h4>
-            </div>
-        </div>
 
-
-        <!--  -->
-
-
-        <div class="commentaire">
-            <!-- rectengle -->
-            <div></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum provident quas quod ex dolor ea minus ut optio fuga a reiciendis sequi sunt facilis molestiae, ipsam nemo odio ipsum illo?</p>
-            <div>
-                <img src="" alt="">
-                <h3>latifa</h3>
-                <h4></h4>
-            </div>
-        </div>
 
 
     </div>
