--- a/section-pricing/index.html
+++ b/section-pricing/index.html
@@ -15,27 +15,36 @@
 
         <h1 class="test">Testimonials</h1>
         <div class="comment">
-            <div>
+            <dir class="border"></dir>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum adipisci sapiente aspernatur incidunt soluta ipsam possimus veniam dolorem nihil, delectus dignissimos, vero hic! Sapiente explicabo vitae natus adipisci doloribus enim. Et quidem officiis
+                alias nam distinctio omnis odio dolorum ex architecto, repellat sit mollitia cum saepe reiciendis ipsa quisquam? Atque odio quo sunt accusantium iure laborum necessitatibus vero porro incidunt?
+            </p>
+
+            <div class="finsection">
                 <div>
-                    <div>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum adipisci sapiente aspernatur incidunt soluta ipsam possimus veniam dolorem nihil, delectus dignissimos, vero hic! Sapiente explicabo vitae natus adipisci doloribus enim. Et quidem officiis
-                        alias nam distinctio omnis odio dolorum ex architecto, repellat sit mollitia cum saepe reiciendis ipsa quisquam? Atque odio quo sunt accusantium iure laborum necessitatibus vero porro incidunt?
-                    </p>
+                    <img src="img/uuu.jpg" alt="">
+                </div>
+                <div class="com">
+                    <h3>El Otmani Saad dine</h3>
+                    <p>Le chef du gouvernement</p>
                 </div>
 
-                <div>
-
+                <div class="circle">
+                    <i class="far fa-circle"></i>
+                    <i class="far fa-circle"></i>
+                    <i class="fas fa-circle"></i>
                 </div>
-                <img src="" alt="">
             </div>
         </div>
+
     </div>
 
 
@@ -45,5 +54,5 @@
 
 
 
-    </div>
+
 </body>
