--- a/team and client/index.html
+++ b/team and client/index.html
@@ -25,10 +25,10 @@
                     chose pour lui.</p>
 
                 <ul class="icon">
-                    <li><a href="#" class="icon-link"></a><i class="fab fa-facebook-f fac"></i></a></li>
-                    <li><a href="#" class="icon-link"></a> <i class="fab fa-twitter"></a></i></li>
-                    <li><a href="#" class="icon-link"></a> <i class="fab fa-instagram"></a></i></li>
-                    <li><a href="#" class="icon-link"></a> <i class="fab fa-linkedin-in"></a></i></li>
+                    <li><a href="#" class="icon-link"><i class="fab fa-facebook-f fac"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
             </div>
 
@@ -43,10 +43,10 @@
                     Teegan collectionne les passe-temps, le dernier étant le patinage artistique, l'apprentissage du
                     ukulélé, du yoga et du ballet.</p>
                 <ul class="icon">
-                    <li><a href="#" class="icon-link"></a><i class="fab fa-facebook-f fac"></i></a></li>
-                    <li><a href="#" class="icon-link"></a> <i class="fab fa-twitter"></a></i></li>
-                    <li><a href="#" class="icon-link"></a> <i class="fab fa-instagram"></a></i></li>
-                    <li><a href="#" class="icon-link"></a> <i class="fab fa-linkedin-in"></a></i></li>
+                    <li><a href="#" class="icon-link"><i class="fab fa-facebook-f "></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
 
             </div>
@@ -61,10 +61,10 @@
                     trouvé
                     en classant les hamburgers par délicatesse.</p>
                 <ul class="icon">
-                    <li><a href="#" class="icon-link"></a><i class="fab fa-facebook-f fac"></i></a></li>
-                    <li><a href="#" class="icon-link"></a> <i class="fab fa-twitter"></a></i></li>
-                    <li><a href="#" class="icon-link"></a> <i class="fab fa-instagram"></a></i></li>
-                    <li><a href="#" class="icon-link"></a> <i class="fab fa-linkedin-in"></a></i></li>
+                    <li><a href="#" class="icon-link"><i class="fab fa-facebook-f fac"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
             </div>
 
@@ -80,10 +80,10 @@
                     nécessaire
                     et convoitant des chaises.</p>
                 <ul class="icon">
-                    <li><a href="#" class="icon-link"></a><i class="fab fa-facebook-f fac"></i></a></li>
-                    <li><a href="#" class="icon-link"></a> <i class="fab fa-twitter"></a></i></li>
-                    <li><a href="#" class="icon-link"></a> <i class="fab fa-instagram"></a></i></li>
-                    <li><a href="#" class="icon-link"></a> <i class="fab fa-linkedin-in"></a></i></li>
+                    <li><a href="#" class="icon-link"><i class="fab fa-facebook-f fac"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
 
             </div>
