AJOUTER DES IMAGES

--- a/index1.html
+++ b/index1.html
@@ -34,13 +34,19 @@
                 </ul>
             </nav>
             <div class="hsepar">
-                <h1>On vous rappelle sous 24h</h1>
-                <h2>Digitalisation en main</h2>
+                <h1 class="title1">On vous rappelle sous 24h</h1>
+                <h2 class="title2">Digitalisation en main</h2>
                 <button class="hbtn"> SUBSCRIBE</button>
             </div>
         </header>
         <section1>
-
+            <div class="hgrid">
+                <div class="hleft"> <img src="/Images/workplace-1245776_1920.jpg" alt="OUR TEAM" class=""></div>
+                <div class="right">
+                    <h2 class="title3">ABOUT <span>US</span></h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
+                </div>
+            </div>
         </section1>
         <section2>
 
