Update2 index1.html

--- a/index1.html
+++ b/index1.html
@@ -11,50 +11,63 @@
 </head>
 
 <body>
-    <div>
-        <header>
-            <a href="#" class="hlogo"> <img src="/Images/Logo2.png" alt="logo"></a>
-            <nav>
-                <ul class="hmenu">
-                    <li>
-                        <a href="#">ACCUEIL</a>
-                    </li>
-                    <li>
-                        <a href="#">A PROPOS</a>
-                    </li>
-                    <li>
-                        <a href="#">NOS SERVICES</a>
-                    </li>
-                    <li>
-                        <a href="#">PRICING</a>
-                    </li>
-                    <li>
-                        <a href="#">CONTACTEZ NOUS</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="hsepar">
-                <h1 class="title1">On vous rappelle sous 24h</h1>
-                <h2 class="title2">Digitalisation en main</h2>
-                <button class="hbtn"> SUBSCRIBE</button>
+    <header>
+        <a href="#" class="hlogo"> <img src="/Images/Logo2.png" alt="logo"></a>
+        <nav>
+            <ul class="hmenu">
+                <li>
+                    <a href="#">ACCUEIL</a>
+                </li>
+                <li>
+                    <a href="#">A PROPOS</a>
+                </li>
+                <li>
+                    <a href="#">NOS SERVICES</a>
+                </li>
+                <li>
+                    <a href="#">PRICING</a>
+                </li>
+                <li>
+                    <a href="#">CONTACTEZ NOUS</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="hsepar">
+            <h1 class="title1">On vous rappelle sous 24h</h1>
+            <h2 class="title2">Digitalisation en main</h2>
+            <button class="hbtn"> SUBSCRIBE</button>
+        </div>
+    </header>
+    <section1>
+        <div class="hgrid">
+            <div class="hleft"> <img src="/Images/workplace-1245776_1920.jpg" alt="OUR TEAM" class=""></div>
+            <div class="right">
+                <h2 class="title3">ABOUT <span>US</span></h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
             </div>
-        </header>
-        <section1>
-            <div class="hgrid">
-                <div class="hleft"> <img src="/Images/workplace-1245776_1920.jpg" alt="OUR TEAM" class=""></div>
-                <div class="right">
-                    <h2 class="title3">ABOUT <span>US</span></h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
-                </div>
+        </div>
+    </section1>
+    <section2>
+        <h2>NOS SERVICES</h2>
+        <p> NOTRE EXPERTISE A VOTRE SERVICES</p>
+        <form class="hmoraba3">
+            <div class="one">
+                <p>CREATION DU SITE INTERNET</p>
             </div>
-        </section1>
-        <section2>
+            <div class="two">
+                <p>DIGITAL MARKETING</p>
+            </div>
+            <div class="tree">
+                <p>DESIGN DE MARQUE</p>
+            </div>
+            <div class="four">
+                <p>PRODUCTION DES PROJETS</p>
+            </div>
+        </form>
+    </section2>
+    <footer>
 
-        </section2>
-        <footer>
-
-        </footer>
-    </div>
+    </footer>
 </body>
 
 </html>
