--- a/index1.html
+++ b/index1.html
@@ -48,7 +48,7 @@
         </div>
     </section1>
     <section2>
-        <h2>NOS SERVICES</h2>
+        <h2 class="title4">NOS SERVICES</h2>
         <p> NOTRE EXPERTISE A VOTRE SERVICES</p>
         <form class="hmoraba3">
             <div class="one">
@@ -65,9 +65,12 @@
             </div>
         </form>
     </section2>
+    <section3>
+
+    </section3>
     <footer>
 
     </footer>
 </body>
 
-</html>
+</html>nkk
