Update3 de l index.html

--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="hhead">
         <a href="#" class="hlogo"> <img src="/Images/Logo2.png" alt="logo"></a>
         <nav>
             <ul class="hmenu">
@@ -33,44 +33,51 @@
             </ul>
         </nav>
         <div class="hsepar">
-            <h1 class="title1">On vous rappelle sous 24h</h1>
-            <h2 class="title2">Digitalisation en main</h2>
+            <h1 class="htitle1">On vous rappelle sous 24h</h1>
+            <h2 class="htitle2">Digitalisation en main</h2>
             <button class="hbtn"> SUBSCRIBE</button>
         </div>
     </header>
-    <section1>
+    <section1 class="hsec1">
         <div class="hgrid">
             <div class="hleft"> <img src="/Images/workplace-1245776_1920.jpg" alt="OUR TEAM" class=""></div>
-            <div class="right">
-                <h2 class="title3">ABOUT <span>US</span></h2>
+            <div class="hright">
+                <h2 class="htitle3">ABOUT <span>US</span></h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
             </div>
         </div>
     </section1>
-    <section2>
-        <h2 class="title4">NOS SERVICES</h2>
+    <section2 class="hsec2">
+        <h2 class="htitle4">NOS SERVICES</h2>
         <p> NOTRE EXPERTISE A VOTRE SERVICES</p>
         <form class="hmoraba3">
-            <div class="one">
+            <div class="hone">
                 <p>CREATION DU SITE INTERNET</p>
             </div>
-            <div class="two">
+            <div class="htwo">
                 <p>DIGITAL MARKETING</p>
             </div>
-            <div class="tree">
+            <div class="htree">
                 <p>DESIGN DE MARQUE</p>
             </div>
-            <div class="four">
+            <div class="hfour">
                 <p>PRODUCTION DES PROJETS</p>
             </div>
         </form>
     </section2>
-    <section3>
-
+    <section3 class="hsec3">
+        <div class="hgrid4">
+            <div class="hleft1"></div>
+            <div class="hright1"></div>
+        </div>
     </section3>
-    <footer>
-
-    </footer>
+    <section4 class="hsec4">
+        <div class="hgrid3">
+            <p>DE LA STRATÉGIE AU DÉVELOPPEMENT WEB, NOUS REGROUPONS TOUTE LA CHAINE DE VALEUR DU NUMÉRIQUE. NOTRE TALENT EST À VOTRE DISPOSITION POUR VOUS ACCOMPAGNER DANS L’UNIVERS DIGITAL</p>
+            <button class="hbtn ">CONTACTEZ NOUS</button>
+        </div>
+    </section4>
+    <footer></footer>
 </body>
 
-</html>nkk
+</html>
