Update4 de l index.html

--- a/index1.html
+++ b/index1.html
@@ -43,32 +43,38 @@
             <div class="hleft"> <img src="/Images/workplace-1245776_1920.jpg" alt="OUR TEAM" class=""></div>
             <div class="hright">
                 <h2 class="htitle3">ABOUT <span>US</span></h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
+                <p class="p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
             </div>
         </div>
     </section1>
     <section2 class="hsec2">
         <h2 class="htitle4">NOS SERVICES</h2>
-        <p> NOTRE EXPERTISE A VOTRE SERVICES</p>
+        <p class="p2"> NOTRE EXPERTISE A VOTRE SERVICES</p>
         <form class="hmoraba3">
             <div class="hone">
-                <p>CREATION DU SITE INTERNET</p>
+                <p class="p3">CREATION DU SITE INTERNET</p>
             </div>
             <div class="htwo">
-                <p>DIGITAL MARKETING</p>
+                <p class="p3">DIGITAL MARKETING</p>
             </div>
             <div class="htree">
-                <p>DESIGN DE MARQUE</p>
+                <p class="p3">DESIGN DE MARQUE</p>
             </div>
             <div class="hfour">
-                <p>PRODUCTION DES PROJETS</p>
+                <p class="p3">PRODUCTION DES PROJETS</p>
             </div>
         </form>
     </section2>
     <section3 class="hsec3">
         <div class="hgrid4">
-            <div class="hleft1"></div>
-            <div class="hright1"></div>
+            <div class="hleft1"><img src="/Images/img-4.png" alt="Misbah"></div>
+            <div class="hright1">
+                <h2 class="htitle5">Vous avez un projet ?</h2>
+                <p class="p4">
+                    Vous recherchez une agence web créative, sérieuse et experte compétente pour développer votre productivité, activité et visibilité?
+                </p>
+                <button class="hbtn">Faison connaisance</button>
+            </div>
         </div>
     </section3>
     <section4 class="hsec4">
