faire le style du header de page

--- a/index1.html
+++ b/index1.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="hhead">
-        <a href="#" class="hlogo"> <img src="/Images/Logo2.png" alt="logo"></a>
+        <img src="/Images/Logo2.png" alt="logo" class="hlogo">
         <nav>
             <ul class="hmenu">
                 <li>
@@ -40,7 +40,7 @@
     </header>
     <section1 class="hsec1">
         <div class="hgrid">
-            <div class="hleft"> <img src="/Images/workplace-1245776_1920.jpg" alt="OUR TEAM" class=""></div>
+            <div class="hleft"> <img src="/Images/workplace-1245776_1920.jpg" alt="OUR TEAM" class="img1"></div>
             <div class="hright">
                 <h2 class="htitle3">ABOUT <span>US</span></h2>
                 <p class="p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
