--- a/team and client/index.html
+++ b/team and client/index.html
@@ -10,8 +10,39 @@
 </head>
 
 <body>
-    <section>
+
+
+
+
+    <!-- -----------------------------  start header area------------------------------------ -->
+
+
+    <div class="header">
+
+
+        <div class="abg"></div>
+
         <h1>Notre Equipe</h1>
+        <div class="para">
+            <p>Nous sommes une équipe de créateurs, de penseurs, d'explorateurs et de chanteurs de théâtre. Nous
+                abordons le travail et jouons avec curiosité et expérimentation, en utilisant ce que nous apprenons
+                pour
+                créer des produits numériques significatifs qui se connectent avec les gens, tout comme vous.</p>
+
+        </div>
+
+
+    </div>
+
+    <!-- ------------------------------------end header area ---------------------------------------->
+
+
+
+
+    <!-- -----------------------------------start first section ------------------------------------->
+    <section>
+
+
         <div class="container">
             <div class="team">
                 <img src="images/team_member1.jpg" alt="team_member1">
@@ -20,12 +51,10 @@
                 <p>Mark aide nos clients à réaliser leur vision de marque dans l'espace numérique grâce à des conseils
                     stratégiques et une gestion de projet rationalisée. Il aide également ses collègues musiciens à
                     réaliser
-                    leur vision de groupe dans l'espace analogique en tant que bassiste indépendant. C'est un peu la
-                    même
-                    chose pour lui.</p>
+                    leur vision de groupe dans l'espace analogique en tant que bassiste indépendant. </p>
 
                 <ul class="icon">
-                    <li><a href="#" class="icon-link"><i class="fab fa-facebook-f fac"></i></a></li>
+                    <li><a href="#" class="icon-link"> <i class="fab fa-facebook-f fac"></i></a></li>
                     <li><a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a></li>
                     <li><a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a></li>
                     <li><a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
@@ -40,8 +69,7 @@
                 <p>Teegan est un passionné d'Internet avec un penchant pour embrasser la vie noob. Elle aime bricoler le
                     code et ne trouve rien de plus satisfaisant que de donner vie aux designs. Hors ligne, le
                     passe-temps de
-                    Teegan collectionne les passe-temps, le dernier étant le patinage artistique, l'apprentissage du
-                    ukulélé, du yoga et du ballet.</p>
+                    Teegan collectionne les passe-temps, le dernier étant le patinage artistique.</p>
                 <ul class="icon">
                     <li><a href="#" class="icon-link"><i class="fab fa-facebook-f "></i></a></li>
                     <li><a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a></li>
@@ -76,9 +104,7 @@
                 <p>Kristy est obsédée par tout ce qui concerne le design. Perfectionniste dans l'âme, elle croit qu'un
                     bon
                     design est dans les détails. Quand elle ne fait pas mousser le design danois, vous pouvez la trouver
-                    illustrant, traquant de nouveaux desserts à essayer, achetant plus de plantes d'intérieur que
-                    nécessaire
-                    et convoitant des chaises.</p>
+                    illustrant, traquant de nouveaux desserts à essayer, achetant plus de plantes .</p>
                 <ul class="icon">
                     <li><a href="#" class="icon-link"><i class="fab fa-facebook-f fac"></i></a></li>
                     <li><a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a></li>
@@ -91,6 +117,32 @@
 
 
     </section>
+    <!------------------------------------- end first section ------------------------------------->
+
+
+
+
+    <!------------------------------------- start second section ---------------------------------->
+    <section>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+
+    </section>
+
+
 
 </body>
 
