add section testimonaile

--- a/section-pricing/index.html
+++ b/section-pricing/index.html
@@ -4,55 +4,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+
     <title>Document</title>
 </head>
 
 <body>
-    <div class="testimoniale">
+    <section>
+        <h1>TESTIMONAILE</h1>
+        <div class="testimonaile">
 
-        <h1 class="test">Testimonials</h1>
-        <div class="comment">
-            <dir class="border"></dir>
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-            </div>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum adipisci sapiente aspernatur incidunt soluta ipsam possimus veniam dolorem nihil, delectus dignissimos, vero hic! Sapiente explicabo vitae natus adipisci doloribus enim. Et quidem officiis
-                alias nam distinctio omnis odio dolorum ex architecto, repellat sit mollitia cum saepe reiciendis ipsa quisquam? Atque odio quo sunt accusantium iure laborum necessitatibus vero porro incidunt?
-            </p>
-
-            <div class="finsection">
+            <div class="jone">
                 <div>
                     <img src="img/uuu.jpg" alt="">
                 </div>
-                <div class="com">
-                    <h3>El Otmani Saad dine</h3>
-                    <p>Le chef du gouvernement</p>
+                <div class="personne">
+                    <h2>Web Developer</h2>
+                    <h3>desinger</h3>
                 </div>
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque accusamus, dicta vel provident magnam vero dolorem modi amet et expedita necessitatibus laudantium numquam mollitia officiis unde iure sit minus placeat.
+                    </p>
+                </div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <div class="social">
 
-                <div class="circle">
-                    <i class="far fa-circle"></i>
-                    <i class="far fa-circle"></i>
-                    <i class="fas fa-circle"></i>
+                    <img src="img/twitter (1).png" alt="">
+
+
+                    <img src="img/fb.png" alt="">
+
+                    <img src="img/linkden.png" alt="">
+
+                </div>
+            </div>
+            <div class="steve">
+                <div>
+                    <img src="img/uuu.jpg" alt="">
+                </div>
+                <div class="personne">
+                    <h2>Project Manager</h2>
+                    <h3>desinger</h3>
+                </div>
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque accusamus, dicta vel provident magnam vero dolorem modi amet et expedita necessitatibus laudantium numquam mollitia officiis unde iure sit minus placeat.
+                    </p>
+                </div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+            </div>
+            <div class="ball">
+                <div>
+                    <img src="img/uuu.jpg" alt="">
+                </div>
+                <div class="personne">
+                    <h2>Web & Mobile Developer</h2>
+                    <h3>desinger</h3>
+                </div>
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque accusamus, dicta vel provident magnam vero dolorem modi amet et expedita necessitatibus laudantium numquam mollitia officiis unde iure sit minus placeat.
+                    </p>
+                </div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <i class="far fa-star"></i>
                 </div>
             </div>
         </div>
-
-    </div>
-
-
-    <!--  -->
-
-
-
-
-
-
+    </section>
 </body>
+
+</html>
