commit pour style de header

--- a/index1.html
+++ b/index1.html
@@ -12,29 +12,36 @@
 
 <body>
     <header class="hhead">
-        <img src="/Images/Logo2.png" alt="logo" class="hlogo">
-        <nav>
-            <ul class="hmenu">
-                <li>
-                    <a href="#">ACCUEIL</a>
-                </li>
-                <li>
-                    <a href="#">A PROPOS</a>
-                </li>
-                <li>
-                    <a href="#">NOS SERVICES</a>
-                </li>
-                <li>
-                    <a href="#">PRICING</a>
-                </li>
-                <li>
-                    <a href="#">CONTACTEZ NOUS</a>
-                </li>
-            </ul>
-        </nav>
+
+
+        <div class="fixe">
+            <img src="/Images/Logo2.png" alt="logo" class="hlogo">
+            <nav>
+                <ul class="hmenu">
+                    <li>
+                        <a href="#">ACCUEIL</a>
+                    </li>
+                    <li>
+                        <a href="#">A PROPOS</a>
+                    </li>
+                    <li>
+                        <a href="#">NOS SERVICES</a>
+                    </li>
+                    <li>
+                        <a href="#">PRICING</a>
+                    </li>
+                    <li>
+                        <a href="#">CONTACTEZ NOUS</a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fas fa-search"></i></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
         <div class="hsepar">
-            <h1 class="htitle1">On vous rappelle sous 24h</h1>
-            <h2 class="htitle2">Digitalisation en main</h2>
+            <h1>On vous rappelle sous 24h</h1>
+            <p class="para">Digitalisation en main</p>
             <button class="hbtn"> SUBSCRIBE</button>
         </div>
     </header>
