finalisation de section testimonaile

--- a/section-pricing/index.html
+++ b/section-pricing/index.html
@@ -15,13 +15,13 @@
         <h1>TESTIMONAILE</h1>
         <div class="testimonaile">
 
-            <div class="jone">
+            <div class="jone com">
                 <div>
                     <img src="img/uuu.jpg" alt="">
                 </div>
                 <div class="personne">
-                    <h2>Web Developer</h2>
-                    <h3>desinger</h3>
+                    <h2>desinger</h2>
+                    <h3>Web Developer</h3>
                 </div>
                 <div>
                     <p>
@@ -35,14 +35,11 @@
                     <i class="fas fa-star"></i>
                     <i class="far fa-star"></i>
                 </div>
-                <div class="social">
+                <div class="social com">
 
-                    <img src="img/twitter (1).png" alt="">
-
-
-                    <img src="img/fb.png" alt="">
-
-                    <img src="img/linkden.png" alt="">
+                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-whatsapp-square"></i>
+                    <i class="fab fa-twitter-square"></i>
 
                 </div>
             </div>
@@ -51,20 +48,27 @@
                     <img src="img/uuu.jpg" alt="">
                 </div>
                 <div class="personne">
-                    <h2>Project Manager</h2>
-                    <h3>desinger</h3>
+                    <h2>desinger</h2>
+                    <h3>Project Manager</h3>
                 </div>
                 <div>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque accusamus, dicta vel provident magnam vero dolorem modi amet et expedita necessitatibus laudantium numquam mollitia officiis unde iure sit minus placeat.
                     </p>
                 </div>
-                <div class="stars">
+                <div class="stars com">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
+                </div>
+                <div class="social">
+
+                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-whatsapp-square"></i>
+                    <i class="fab fa-twitter-square"></i>
+
                 </div>
             </div>
             <div class="ball">
@@ -72,8 +76,8 @@
                     <img src="img/uuu.jpg" alt="">
                 </div>
                 <div class="personne">
-                    <h2>Web & Mobile Developer</h2>
-                    <h3>desinger</h3>
+                    <h2>desinger</h2>
+                    <h3>Mobile Developer</h3>
                 </div>
                 <div>
                     <p>
@@ -86,6 +90,13 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                     <i class="far fa-star"></i>
+                </div>
+                <div class="social">
+
+                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-whatsapp-square"></i>
+                    <i class="fab fa-twitter-square"></i>
+
                 </div>
             </div>
         </div>
